Fix - Actionbar menus are hidden behind the document viewer (#2048)

--- a/geonode_mapstore_client/client/themes/geonode/less/_action-navbar.less
+++ b/geonode_mapstore_client/client/themes/geonode/less/_action-navbar.less
@@ -6,7 +6,7 @@
 .ms-action-navbar {
     .dropdown {
         .dropdown-menu {
-            button, li button {
+            button, li button, a {
                 padding: 3px 20px;
                 text-align: left;
                 width: 100%;
