--- a/geonode_mapstore_client/client/themes/geonode/less/_footer.less
+++ b/geonode_mapstore_client/client/themes/geonode/less/_footer.less
@@ -58,3 +58,12 @@
         padding: 0 0.5rem;
     }
 }
+
+.gn-footer-placeholder {
+    display: block;
+}
+.gn-catalogue:has(.page-viewer) {
+    .gn-footer-placeholder {
+        display: none;
+    }
+}
